@@ -84,12 +84,9 @@
 					<artifactId>maven-compiler-plugin</artifactId>
 					<version>3.12.1</version>
 					<configuration>
-						<release>21</release>
+						<release>22</release>
 						<encoding>UTF-8</encoding>
 						<showWarnings>true</showWarnings>
-						<compilerArgs>
-							<compilerArg>--enable-preview</compilerArg>
-						</compilerArgs>
 					</configuration>
 				</plugin>
 				<plugin>
@@ -188,10 +185,7 @@
 				</executions>
 				<configuration>
 					<excludePackageNames>*.extr:*.extr.*</excludePackageNames>
-					<release>21</release>
-					<additionalOptions>
-						<option>--enable-preview</option>
-					</additionalOptions>
+					<release>22</release>
 				</configuration>
 			</plugin>
 			<plugin>
